[gd_scene load_steps=8 format=3 uid="uid://cp54kh41jj70m"]

[ext_resource type="Texture2D" uid="uid://c78vvxnxs7vvj" path="res://panel/panel_drawing.png" id="1_21pkk"]
[ext_resource type="Script" path="res://panel/panel.gd" id="1_xg510"]
[ext_resource type="PackedScene" uid="uid://cxubb5u016ja0" path="res://panel/rune/rune.tscn" id="2_7uye3"]
[ext_resource type="PackedScene" uid="uid://g00ong545pei" path="res://panel/stone/stone.tscn" id="3_3vak4"]
[ext_resource type="PackedScene" uid="uid://b60uj3ecxalpg" path="res://panel/lines/line_2.tscn" id="4_3jcq2"]
[ext_resource type="Script" path="res://panel/Stones.gd" id="4_7gyfi"]
[ext_resource type="PackedScene" uid="uid://buy41xyjdgrlq" path="res://panel/lines/line_3.tscn" id="5_gah57"]

[node name="Panel" type="Node2D" node_paths=PackedStringArray("_stone_1", "_stone_2", "_stone_3")]
script = ExtResource("1_xg510")
_stone_1 = NodePath("Stones/stone_1")
_stone_2 = NodePath("Stones/stone_2")
_stone_3 = NodePath("Stones/stone_3")

[node name="LeftButton" type="Button" parent="."]
offset_left = -152.0
offset_top = 53.5
offset_right = -49.0
offset_bottom = 130.5
text = "open 
summoning 
UI"
metadata/_edit_use_anchors_ = true

[node name="CenterButton" type="Button" parent="."]
offset_left = 12.0
offset_top = 53.5
offset_right = 115.0
offset_bottom = 130.5
text = "open 
summoning 
UI"
metadata/_edit_use_anchors_ = true

[node name="RightButton" type="Button" parent="."]
offset_left = 169.0
offset_top = 53.5
offset_right = 272.0
offset_bottom = 130.5
text = "open 
summoning 
UI"
metadata/_edit_use_anchors_ = true

[node name="Rune" parent="." instance=ExtResource("2_7uye3")]

[node name="Stones" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.470588)
position = Vector2(67, -2.5)
texture = ExtResource("1_21pkk")
script = ExtResource("4_7gyfi")

[node name="stone_1" parent="Stones" instance=ExtResource("3_3vak4")]
position = Vector2(175, -88)

[node name="stone_2" parent="Stones" instance=ExtResource("3_3vak4")]
position = Vector2(175, 7)
line = ExtResource("4_3jcq2")

[node name="stone_3" parent="Stones" instance=ExtResource("3_3vak4")]
position = Vector2(175, 97)
line = ExtResource("5_gah57")
